<resources>
    <string name="app_name">LoRaPark</string>
    <string name="button_open_sensor_overview_map">Open sensor overview</string>
    <string name="button_open_rules">Open rules</string>
    <string name="button_trigger_rules">Trigger rules</string>
    <string name="label_sensor_overview">Sensor overview</string>
    <string name="label_rule_overview">Rule overview</string>
    <string name="label_storage_access">Storage permission is required to store map tiles to reduce data usage and for offline usage.</string>
    <string name="label_location_access">Location permission is required to show the user\'s location on map.</string>
    <string name="label_sensor_details">Sensor details</string>

    <!--Error messages-->
    <string name="error_sensor_descriptions_not_loaded">An error occurred retrieving the sensor data</string>
    <string name="error_sensor_values_not_loaded">An error occurred retrieving the sensor values</string>
    <string name="error_rules_not_loaded">An error occurred retrieving the rules</string>

    <string name="label_tab_active_rules">Active</string>
    <string name="label_tab_inactive_rules">Inactive</string>
    <string name="label_tab_all_rules">All</string>
    <string name="label_rule_name">Name</string>
    <string name="label_is_active">active</string>
    <string name="label_add_rule">Add rule</string>
    <string name="label_download_rule">Download rule</string>
    <string name="label_download_rules">Download rules</string>
    <string name="info_no_rule_selected">No rule was selected to download!\nSelect one or more rules to download them.</string>
    <string name="label_delete_all_rules">Delete all rules</string>
    <string name="label_rule_details">Rule detail</string>

    <string name="label_key">Key</string>
    <string name="label_value">Value</string>
    <string name="label_unit">Unit</string>
    <string name="button_open_fence_test">Open fence test</string>
    <string name="label_button_delete_all">Delete tracked fences</string>
    <string name="label_button_add_geofence">Add Geofence</string>
    <string name="label_button_delete_geofence">Delete geofence (with id)</string>
    <string name="label_button_query_geofence">Query geofence</string>

</resources>